--- a/src/styles/EventCard.module.css
+++ b/src/styles/EventCard.module.css
@@ -15,19 +15,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-block: 10px;
+  padding: 7px 0;
   border-bottom: 1px solid rgb(179, 179, 179);
 }
 
 .header p {
   color: rgb(134, 134, 134);
   font-weight: 500;
-  font-size: 1.1rem;
-  letter-spacing: 0.12rem;
+  font-size: 0.9rem;
+  letter-spacing: 0.1rem;
 }
 
 .content {
-  padding-block: 10px;
+  padding: 10px 0;
 }
 
 .img {
