--- a/src/styles/Signup.module.css
+++ b/src/styles/Signup.module.css
@@ -4,7 +4,7 @@
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  /* gap: 2rem; */
 }
 
 .heading > h1 {
@@ -23,6 +23,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   width: 80%;
   margin: 0 auto;
+  margin-top: 2rem;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -31,49 +32,59 @@
 .back {
   display: flex;
   align-items: center;
-  width: max-content;
+  justify-content: space-between;
+  width: 75px;
   padding: 0.6rem 0.8rem;
-  font-size: 1.2rem;
+  margin-left: 3rem;
+  font-size: 0.8rem;
   font-weight: 500;
   border: none;
   border-radius: 5px;
   background-color: #80b9e8;
   color: white;
-  margin-bottom: 2rem;
+  cursor: pointer;
 }
 
 .inputs {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
+  margin: 2rem 2rem 0 2rem;
+  /* gap: 2rem; */
 }
 
 .group {
   width: 45%;
+  margin: 1rem;
 }
 
 .group > label {
-  font-size: 1.3rem;
-  color: rgb(83, 83, 83);
+  font-size: 1rem;
+  margin-left: 0.3rem;
+  padding-bottom: 0.3rem;
+  color: rgb(123, 122, 122);
   font-weight: 500;
 }
 
 .group > input {
   width: 100%;
-  border: none;
+  /* border: none; */
   outline: none;
-  border-bottom: 1px solid rgb(201, 201, 201);
-  padding: 0.5rem 0.6rem;
-  font-size: 1.4rem;
-}
+  border: 1px solid rgb(201, 201, 201);
+  border-radius: 10px;
 
-.group > input::placeholder {
+  /* border-bottom: 1px solid rgb(201, 201, 201); */
+  margin: 0.3rem 0;
+  padding: 0.4rem 0.6rem;
   font-size: 1rem;
 }
 
+.group > input::placeholder {
+  font-size: 1em;
+}
+
 .cta {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .cta > button {
@@ -82,14 +93,16 @@
   justify-content: center;
   color: white;
   margin: auto;
-  width: 300px;
+  width: 200px;
   border: none;
   outline: none;
-  padding-block: 0.6rem;
-  font-size: 1.5rem;
+  padding: 0.6rem 0;
+  font-size: 1.2rem;
   font-weight: 600;
   background-color: #80b9e8;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.678);
+  box-shadow: -5px -5px 20px #fff,  5px 5px 20px #b0b3bd;
+
+  /* box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.678); */
   border-radius: 10px;
   cursor: pointer;
 }
