--- a/src/styles/Vision.module.css
+++ b/src/styles/Vision.module.css
@@ -8,32 +8,33 @@
   justify-content: center;
   padding: 2rem;
   margin-top: 2rem;
-  gap: 2rem;
+  /* gap: 2rem; */
   border-radius: 15px;
 }
 
 .heading h1 {
   font-size: 2.5rem;
+  margin: 0.8rem;
   color: #5f5f5f;
 }
 
 .pees {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .pees p {
+  margin: 10px auto;
   width: 84%;
-  margin: auto;
-  font-size: 1.125rem;
+  font-size: 1rem;
   white-space: pre-line;
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  /* gap: 2rem; */
 }
 
 .cards {
@@ -41,7 +42,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  margin-top:12px;
 }
 
 .card {
@@ -51,11 +52,12 @@
   width: 20%;
   border-radius: 10px;
   padding: 1rem;
+  margin: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  /* gap: 15px; */
 }
 
 .img {
@@ -74,6 +76,7 @@
 .desc h3 {
   color: #474747;
   font-size: 0.85rem;
+  text-align: center;
 }
 
 .desc {
@@ -81,7 +84,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 5px;
+  margin-top:12px;
+  /* margin: 0.5rem; */
 }
 
 .desc a {
@@ -89,6 +93,7 @@
   border: none;
   outline: none;
   padding: 0.1rem 0.4rem;
+  margin-top: 0.3rem;
   background-color: transparent;
   font-size: 0.7rem;
   font-weight: 500;
